--- a/src/CognitiveKioskUWP/CognitiveKioskUWP.csproj
+++ b/src/CognitiveKioskUWP/CognitiveKioskUWP.csproj
@@ -162,6 +162,9 @@
     <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.Face">
       <Version>2.2.0-preview</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Bot.Builder.PersonalityChat">
+      <Version>4.0.0-alpha-m1.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.CognitiveServices.Speech">
       <Version>0.6.0</Version>
     </PackageReference>
