--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
-#build/
+build/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
