--- a/src/CognitiveKioskUWP/CognitiveKioskUWP.csproj
+++ b/src/CognitiveKioskUWP/CognitiveKioskUWP.csproj
@@ -17,8 +17,7 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <PackageCertificateKeyFile>
-    </PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>mtcdisplay.pfx</PackageCertificateKeyFile>
     <GenerateAppInstallerFile>True</GenerateAppInstallerFile>
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
     <AppxBundle>Always</AppxBundle>
@@ -27,7 +26,8 @@
     <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
     <AppxPackageDir>C:\projects\Repos\MTCCognitiveKiosk\build\</AppxPackageDir>
     <HockeyAppResourceId>b9e0f03f36804cb8a8478edc83104a07</HockeyAppResourceId>
-    <PackageCertificateThumbprint>7FDC358FFCA2DCB6B41492E31D774FF5AC44DC24</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>
+    </PackageCertificateThumbprint>
     <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
     <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
     <GenerateTestArtifacts>True</GenerateTestArtifacts>
@@ -201,6 +201,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Azure.AI.Vision.ImageAnalysis">
+      <Version>0.13.0-beta.1</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
       <Version>4.5.1</Version>
     </PackageReference>
@@ -214,10 +217,10 @@
       <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.CustomVision.Training">
-      <Version>2.0.0</Version>
+      <Version>2.1.0-preview</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.Face">
-      <Version>2.8.0-preview.2</Version>
+      <Version>2.8.0-preview.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CognitiveServices.Speech">
       <Version>1.21.0</Version>
