updated version and gap for vision

--- a/src/CognitiveKioskUWP/CognitiveKioskUWP.csproj
+++ b/src/CognitiveKioskUWP/CognitiveKioskUWP.csproj
@@ -32,7 +32,7 @@
     <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
     <GenerateTestArtifacts>True</GenerateTestArtifacts>
     <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
-    <AppInstallerUri>https://ikioskstorage.z13.web.core.windows.net/</AppInstallerUri>
+    <AppInstallerUri>https://saeastus2bryandemo.z20.web.core.windows.net/</AppInstallerUri>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
