--- a/src/CognitiveKioskUWP/CognitiveKioskUWP.csproj
+++ b/src/CognitiveKioskUWP/CognitiveKioskUWP.csproj
@@ -194,6 +194,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Azure.AI.OpenAI">
+      <Version>2.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Azure.AI.Vision.ImageAnalysis">
       <Version>0.13.0-beta.1</Version>
     </PackageReference>
@@ -205,6 +208,12 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.14</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Rest.ClientRuntime">
+      <Version>2.3.24</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.3</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
